# safe_eval

./: pyproject.toml
.github/workflows/: test.yml
safe_eval/: __init__.py  attempt_model.py  default_rules.py  errors.py  eval.py  rules.py
scripts/: lint.sh  unittest.sh
tests/: test_basic.py
